docs/style.css
:root {
	min-width: 300px;
	color-scheme: light dark;

	--fonts: "Noto Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
		"Roboto", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "Helvetica Neue",
		sans-serif;
	--fonts-mono: "Fira Code", "Jetbrains Mono", "Roboto Mono", "Oxygen Mono",
		"Ubuntu Mono", monospace;

	--fg-color: #1f2329;
	--fg-grey: #59636e;
	--bg-grey: #f6f8fa;
	--bg-color: #ffffff;
	--link-color: #0969da;
}

html,
body {
	margin: 0;
	padding: 0;
	tab-size: 4ch;
	background-color: var(--bg-color);
	color: var(--fg-color);
	font-family: var(--fonts);
}

body {
	display: grid;
	grid-template-columns: 20rem auto;
	grid-template-rows: 4rem auto 5rem;
	grid-template-areas: "header header" "nav main" "footer footer";
}

body.no-nav {
	display: grid;
	grid-template-columns: auto;
	grid-template-areas: "header" "main" "footer";
}

main {
	grid-area: main;
	display: block;
	margin: 0 auto 1rem 0;
	padding: 0 1rem;
	max-width: 100ch;
}

body.no-nav main {
	margin: 0 auto 1rem;
}

code,
pre {
	font-family: var(--fonts-mono);
	background-color: var(--bg-grey);
	padding: 0.15rem 0.25rem;
	border-radius: 0.5rem;
}

pre {
	min-height: 2rem;
	padding: 0.5rem;
	overflow-x: scroll;
}

a {
	color: var(--link-color);
	cursor: pointer;
}

h2 {
	margin: 2rem 0 1rem 0;
}

ol {
	padding: 0 0 0 5ch;
}

li {
	margin: 0.75rem 0;
}

button {
	font-family: var(--fonts);
	background-color: var(--bg-grey);
	padding: 0.25rem 0.5rem;
	border: 1px var(--fg-grey) solid;
	outline: none;
	border-radius: 0.5rem;
	cursor: pointer;
	text-wrap: nowrap;
}

table {
	table-layout: fixed;
	border-collapse: collapse;
}

td,
th {
	border: var(--bg-grey) 2px solid;
	padding: 0.5rem;
}

th {
	background-color: var(--bg-grey);
	position: sticky;
	top: -1px;
}

.header {
	grid-area: header;
	display: flex;
	justify-content: space-between;
	align-items: center;
	box-sizing: border-box;
	width: 100%;
	padding: 0 1rem;
	margin: 0;
}

.header-icon-link {
	text-decoration: none;
	color: var(--fg-color);
}

.header-nav {
	list-style: none;
	display: inline-flex;
	flex-direction: row;
	gap: 3rem;
	margin: 0;
	padding: 0;
}

.header-nav-item a {
	text-decoration: none;
	color: var(--fg-color);
	font-weight: bold;
	font-size: 1.5rem;
}

.header-nav-item.current a {
	font-style: italic;
}

.header-nav-item a:hover {
	text-decoration: underline;
}

.nav {
	grid-area: nav;
	overflow-x: hidden;
	max-width: 100%;
	box-sizing: border-box;
	position: sticky;
	height: max-content;
	top: -1px;
	display: flex;
	flex-direction: column;
	gap: 1rem;
	padding: 2rem;
	font-size: 1rem;
}

.nav h2 {
	font-size: 1.5em;
}

.nav a {
	color: var(--fg-color);
	text-decoration: none;
	font-weight: bold;
	font-size: 1.2em;
}

.nav a:hover {
	text-decoration: underline;
}

.nav a.subnav {
	font-size: 0.85em;
}

.footer {
	grid-area: footer;
	display: grid;
	grid-template-columns: 1fr 1fr 0.5fr 1fr 1fr;
	grid-template-rows: 1fr;
	grid-template-areas: ". . logo . .";
	width: 100%;
	height: 5rem;
	background-color: var(--bg-grey);
	margin: 0;
	padding: 0;
	z-index: 100;
}

.footer a {
	margin: auto;
	color: var(--fg-color);
	text-decoration: none;
}

.footer a:hover {
	text-decoration: underline;
}

.footer .inline-img {
	font-size: 2rem;
}

.footer-logo {
	grid-area: logo;
}

.table-wrapper {
	overflow-x: scroll;
	width: 0;
	min-width: 100%;
}

.data-api-endpoints td:nth-child(1),
.data-api-endpoints td:nth-child(2) {
	text-align: end;
	text-wrap: nowrap;
	width: fit-content;
}

.data-api-endpoints td:nth-child(3) {
	min-width: 30ch;
}

.config-api-endpoints td:nth-child(1),
.auth-api-endpoints td:nth-child(1) {
	text-align: center;
	text-wrap: nowrap;
	width: fit-content;
}

.config-api-endpoints td:nth-child(2),
.config-api-endpoints td:nth-child(3),
.config-api-endpoints td:nth-child(4),
.auth-api-endpoints td:nth-child(2) {
	text-align: end;
	text-wrap: nowrap;
	width: fit-content;
}

.auth-api-endpoints td:nth-child(3),
.auth-api-endpoints td:nth-child(4) {
	min-width: 20ch;
}

.config-api-endpoints td:nth-child(5),
.auth-api-endpoints td:nth-child(5) {
	min-width: 30ch;
}

.inline-img {
	height: 1.2em;
	vertical-align: text-bottom;
}

.big-img {
	width: 100%;
}

.footnote {
	font-size: 0.8rem;
}

#try-api {
	display: grid;
	gap: 0.2rem 1rem;
	grid-template-columns: auto 1fr auto;
	grid-template-rows: 2rem 2rem 1fr;
	grid-template-areas: "url-label url button" "out-label out-label out-label" "out out out";
}

#try-api-url-label {
	grid-area: url-label;
	margin: auto 0;
}

#try-api-url-wrapper {
	grid-area: url;
	display: flex;
	margin: auto 0;
}

#try-api-url {
	flex-grow: 1;
	border: none;
	outline: none;
	background: none;
	font-family: var(--fonts-mono);
	font-size: 1rem;
}

#try-api-button {
	grid-area: button;
}

#try-api-out-label {
	grid-area: out-label;
	margin: auto 0;
}

#try-api-out-wrapper {
	grid-area: out;
}

#try-api-out-wrapper > pre {
	margin: 0;
}

@media (prefers-color-scheme: dark) {
	:root {
		--fg-color: #f0f6fc;
		--fg-grey: #9198a1;
		--bg-grey: #1e2329;
		--bg-color: #0d1117;
		--link-color: #4493f8;
	}
}

@media (max-width: 1400px) {
	.header-nav-item.big {
		display: none;
	}
}

@media (max-width: 1200px) {
	.header-nav-item.medium {
		display: none;
	}

	body {
		grid-template-columns: 15rem auto;
	}

	body.no-nav {
		grid-template-columns: auto;
	}

	.nav {
		padding: 1rem;
		font-size: 0.9rem;
	}
}

@media (max-width: 900px) {
	body {
		grid-template-columns: 10rem auto;
	}

	body.no-nav {
		grid-template-columns: auto;
	}

	.header-nav {
		display: none;
	}

	.nav {
		font-size: 0.8rem;
	}
}

@media (max-width: 700px) {
	.footer {
		row-gap: 0;
		grid-template-columns: 1fr 0.5fr 1fr;
		grid-template-rows: 1fr 1fr;
		grid-template-areas: ". logo ." ". logo .";
	}
}

@media (max-width: 500px) {
	:root {
		font-size: 14px;
	}

	body {
		grid-template-columns: auto;
		grid-template-rows: 4rem auto 5rem;
		grid-template-areas: "header" "main" "footer";
	}

	ul {
		padding: 0 0 0 2rem;
	}

	.nav {
		display: none;
	}

	.footer {
		row-gap: 0;
		grid-template-columns: 1fr 1fr;
		grid-template-rows: 1fr 1fr;
		grid-template-areas: ". ." ". .";
	}

	.footer-logo {
		display: none;
	}
}

@media (max-width: 350px) {
	:root {
		font-size: 12px;
	}

	ul {
		padding: 0 0 0 1.5rem;
	}
}

